--- a/display_lookup_domain.html
+++ b/display_lookup_domain.html
@@ -12,7 +12,7 @@
 <!-- 
 File: ./phmnemonic/display_lookup_domain.html
 
-Copyright (c) Phantom Cyber Corporation, 2017
+Copyright (c) Phantom Cyber Corporation, 2017-2018
 
 This unpublished material is proprietary to Phantom Cyber.
 All rights reserved. The methods and
