--- a/display_lookup_domain.html
+++ b/display_lookup_domain.html
@@ -14,7 +14,7 @@
 {% block widget_content %} <!-- Main Start Block -->
 
 <!-- 
-File: ./phmnemonic/display_lookup_domain.html
+File: display_lookup_domain.html
 
 Copyright (c) 2017-2021 Splunk Inc.
 
