--- a/display_lookup_domain.html
+++ b/display_lookup_domain.html
@@ -1,16 +1,17 @@
 {% extends 'widgets/widget_template.html' %}
 {% load custom_template %}
-
-{% block custom_title_prop %}{% if title_logo %}style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"{% endif %}{% endblock %}
+{% block custom_title_prop %}
+  {% if title_logo %}
+    style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"
+  {% endif %}
+{% endblock %}
 {% block title1 %}{{ title1 }}{% endblock %}
 {% block title2 %}{{ title2 }}{% endblock %}
-{% block custom_tools %}
-{% endblock %}
-
-{% block widget_content %} <!-- Main Start Block -->
-
-<!--File: display_lookup_domain.html
-Copyright (c) 2017-2023 Splunk Inc.
+{% block custom_tools %}{% endblock %}
+{% block widget_content %}
+  <!-- Main Start Block -->
+  <!--File: display_lookup_domain.html
+Copyright (c) 2017-2025 Splunk Inc.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -23,10 +24,7 @@ the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
 either express or implied. See the License for the specific language governing permissions
 and limitations under the License.
 -->
-
-<style>
-
-
+  <style>
 .mnemonic-display-domain a:hover {
   text-decoration:underline;
 }
@@ -74,73 +72,74 @@ and limitations under the License.
   font-size : 12px
 }
 
-</style>
-<div class="mnemonic-display-domain" style="overflow: auto; width: 100%; height: 100%; padding-left:10px; padding-right:10px"> <!-- Main Div -->
-  {% for result in results %} <!-- loop for each result -->
-<br>
-
-<!------------------- For each Result ---------------------->
-
-<h3 class="wf-h3-style">Info</h3>
-<table class="wf-table-vertical">
-{% if result.param.domain %}
-<tr>
-  <td><b>Domain/URL</b></td>
-  <td>
-    <a href="javascript:;" onclick="context_menu(this, [{'contains': ['{{ result.param.domain_contains }}'], 'value': '{{ result.param.domain }}' }], 0, {{ container.id }}, null, false);">
-    {{ result.param.domain }}
-    &nbsp;<span class="fa fa-caret-down" style="font-size: smaller;"></span>
-    </a>
-  </td>
-</tr>
-<tr>
-  <td><b>Range Queried</b></td>
-  <td>
-    {{ result.param.range }}
-  </td>
-</tr>
-
-{% if result.summary %}
-<tr>
-  <td><b>Total Entries</b></td>
-  <td>
-    {{ result.summary.total_items }}
-  </td>
-</tr>
-<tr>
-  <td><b>Entries in Result</b></td>
-  <td>
-    {{ result.summary.items_returned }}
-  </td>
-</tr>
-{% endif %}
-
-{% if result.status is False %}
-<tr>
-  <td><b>Status</b></td>
-  <td>
-    Failed
-  </td>
-</tr>
-{% endif %}
-
-{% if result.message %}
-<tr>
-  <td><b>Message</b></td>
-  <td>
-    {{ result.message }}
-  </td>
-</tr>
-{% endif %}
-
-{% endif %}
-</table>
-
-<br>
-
-    <!-- IPs -->
+  </style>
+  <div class="mnemonic-display-domain"
+       style="overflow: auto;
+              width: 100%;
+              height: 100%;
+              padding-left:10px;
+              padding-right:10px">
+    <!-- Main Div -->
+    {% for result in results %}
+      <!-- loop for each result -->
+      <br>
+      <!------------------- For each Result ---------------------->
+      <h3 class="wf-h3-style">Info</h3>
+      <table class="wf-table-vertical">
+        {% if result.param.domain %}
+          <tr>
+            <td>
+              <b>Domain/URL</b>
+            </td>
+            <td>
+              <a href="javascript:;"
+                 onclick="context_menu(this, [{'contains': ['{{ result.param.domain_contains }}'], 'value': '{{ result.param.domain }}' }], 0, {{ container.id }}, null, false);">
+                {{ result.param.domain }}
+                &nbsp;<span class="fa fa-caret-down" style="font-size: smaller;"></span>
+              </a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <b>Range Queried</b>
+            </td>
+            <td>{{ result.param.range }}</td>
+          </tr>
+          {% if result.summary %}
+            <tr>
+              <td>
+                <b>Total Entries</b>
+              </td>
+              <td>{{ result.summary.total_items }}</td>
+            </tr>
+            <tr>
+              <td>
+                <b>Entries in Result</b>
+              </td>
+              <td>{{ result.summary.items_returned }}</td>
+            </tr>
+          {% endif %}
+          {% if result.status is False %}
+            <tr>
+              <td>
+                <b>Status</b>
+              </td>
+              <td>Failed</td>
+            </tr>
+          {% endif %}
+          {% if result.message %}
+            <tr>
+              <td>
+                <b>Message</b>
+              </td>
+              <td>{{ result.message }}</td>
+            </tr>
+          {% endif %}
+        {% endif %}
+      </table>
+      <br>
+      <!-- IPs -->
       {% if result.data %}
-
         <div class="endpoints_table">
           <table class="phantom-table dataTable">
             <thead>
@@ -152,36 +151,35 @@ and limitations under the License.
               </tr>
             </thead>
             {% for curr_data in result.data %}
-            <tr>
-              <td class="widget-td">
-                <a href="javascript:;" onclick="context_menu(this, [{'contains': ['domain'], 'value': '{{ curr_data.query }}' }], 0, {{ container.id }}, null, false);">
-                  {{ curr_data.query }}
-                  &nbsp;<span class="fa fa-caret-down" style="font-size: smaller;"></span>
-                </a>
-              </td>
-              <td class="widget-td">
-                <a href="javascript:;" onclick="context_menu(this, [{'contains': ['{{ curr_data.answer_contains }}'], 'value': '{{ curr_data.answer }}' }], 0, {{ container.id }}, null, false);">
-                  {{ curr_data.answer }}
-                  &nbsp;<span class="fa fa-caret-down" style="font-size: smaller;"></span>
-                </a>
-              </td>
-              <td class="widget-td">{{ curr_data.firstSeenTimestampString }}</td>
-              <td class="widget-td">{{ curr_data.lastSeenTimestampString }}</td>
-            </tr>
+              <tr>
+                <td class="widget-td">
+                  <a href="javascript:;"
+                     onclick="context_menu(this, [{'contains': ['domain'], 'value': '{{ curr_data.query }}' }], 0, {{ container.id }}, null, false);">
+                    {{ curr_data.query }}
+                    &nbsp;<span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                  </a>
+                </td>
+                <td class="widget-td">
+                  <a href="javascript:;"
+                     onclick="context_menu(this, [{'contains': ['{{ curr_data.answer_contains }}'], 'value': '{{ curr_data.answer }}' }], 0, {{ container.id }}, null, false);">
+                    {{ curr_data.answer }}
+                    &nbsp;<span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                  </a>
+                </td>
+                <td class="widget-td">{{ curr_data.firstSeenTimestampString }}</td>
+                <td class="widget-td">{{ curr_data.lastSeenTimestampString }}</td>
+              </tr>
             {% endfor %}
           </table>
         </div>
-      <br>
-
+        <br>
       {% endif %}
-
-
-<!------------------- For each Result END ---------------------->
-
-{% endfor %} <!-- loop for each result end -->
-</div> <!-- Main Div -->
-
-<script>
+      <!------------------- For each Result END ---------------------->
+    {% endfor %}
+    <!-- loop for each result end -->
+  </div>
+  <!-- Main Div -->
+  <script>
 $.extend(true, $.fn.dataTable.defaults, {
     "searching": true,
     "bLengthChange": false,
@@ -200,6 +198,6 @@ $.extend(true, $.fn.dataTable.defaults, {
   });
   $('.dataTable').DataTable();
 
-</script>
-
-{% endblock %} <!-- Main Start Block -->
+  </script>
+{% endblock %}
+<!-- Main Start Block -->
